fix for the toml error

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   functions = "functions"
-  command = "pip install -r functions/requirements.txt"
+  command = "pip install -r requirements.txt"
 
 [functions]
   node_bundler = "esbuild"  # or "node-cjs" if you want to use commonjs
