rolled back, thoroughly tested in the local, pushing the setup to avoid the python env errors

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 # Python virtual environment
 venv/
-
 # Node.js dependencies
 node_modules/
 # Local Netlify folder
 .netlify
-# Local vscode folder
-.vscode
+# Local env file for api key
+.env
