--- a/functions/requirements.txt
+++ b/functions/requirements.txt
@@ -1,3 +1,38 @@
-evaluate==0.4.2
 absl-py==2.1.0
+aiohappyeyeballs==2.3.5
+aiohttp==3.10.3
+aiosignal==1.3.1
+attrs==24.2.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+datasets==2.21.0
+dill==0.3.8
+evaluate==0.4.2
+filelock==3.15.4
+frozenlist==1.4.1
+fsspec==2024.6.1
+huggingface-hub==0.24.5
+idna==3.7
+joblib==1.4.2
+multidict==6.0.5
+multiprocess==0.70.16
+nltk==3.8.1
+numpy==2.0.1
+packaging==24.1
+pandas==2.2.2
+pyarrow==17.0.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.2
+regex==2024.7.24
+requests==2.32.3
 rouge_score==0.1.2
+six==1.16.0
+tqdm==4.66.5
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+xxhash==3.4.1
+yarl==1.9.4
